@@ -20,6 +20,8 @@ Version 1.5.1+svn:
      French, German, Greek, Italian, Lithuanian, Russian, Serbian
    * languages in the language selection are now sorted on name instead of
      code.
+   * unit alignment can be displayed in its gender-specific form in languages
+     which require/support it (bug #11956)
  * WML engine:
    * When examining stored units, now the attacks, max_hitpoints, max_moves,
      and max_experience are the "real" values and can also be modified.
